<resources>
    <string name="app_name" translatable="false">Aakarat</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip_now">Skip Now</string>
    <string name="signin">Sign In</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="code">enter the code here</string>
    <string name="resend_code">resend code?</string>
    <string name="submit">Submit</string>
    <string name="verfication_code">Verification Code</string>
    <string name="logoscreen" translatable="false">logoscreen</string>
    <string name="splash_btn_ar" translatable="false">ع</string>
    <string name="splash_btn_en" translatable="false">EN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="code_spinner">Code</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="who_us">Who Us</string>
    <string name="change_language_prompt">Are you sure you want to change language ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="profile">Profile</string>
    <string name="offer_a_building">Offer a Building</string>
    <string name="request_a_building">Request a Building</string>
    <string name="my_favourite">My Favourite</string>
    <string name="home">Home</string>
    <string name="apartment">Apartment</string>
    <string name="villa">Villa</string>
    <string name="house">House</string>
    <string name="resturant">Restaurant</string>
    <string name="warehouse">Warehouse</string>
    <string name="farms">Farms</string>
    <string name="for_rent">For Rent</string>
    <string name="for_sale">For Sale</string>
    <string name="edit">Edit</string>
    <string name="product_detail">Product Detail</string>
    <string name="code_">Code:</string>
    <string name="type_">Type:</string>
    <string name="area_">Area:</string>
    <string name="bedroom_">Bedroom:</string>
    <string name="bathroom_">Bathroom:</string>
    <string name="price_">Price:</string>
    <string name="garage_">Garage:</string>
    <string name="country_">Country:</string>
    <string name="city_">City:</string>
    <string name="distinct_">Distinct:</string>
    <string name="address_">Address:</string>
    <string name="order_now">Order Now</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="price">Price</string>
    <string name="map">Map</string>
    <string name="description">Description</string>
    <string name="agree_the_privacy_policy">agree the privacy policy</string>
    <string name="garage_availability_">Garage Availability:</string>
    <string name="update">Update</string>
    <string name="products">Products</string>

</resources>
