<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_rela"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/splach_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logoscreen"
        android:scaleType="fitCenter"/>

    <Button
        android:id="@+id/btn_ar"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/splash_btn_ar"
        android:textSize="40sp"
        android:background="@drawable/bg_round_rect_splash"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_en"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_round_rect_splash"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/splash_btn_en"
        android:textSize="30sp"
        android:textColor="@color/white" />


</RelativeLayout>
